--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
     left: 50%;
     transform: translate(-50%, -50%)">
     <a href="https://beian.miit.gov.cn/" target="_blank" style="text-decoration:none;color: #363535;font-size: 12px">皖ICP备2021018240-1</a>
-    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=34010402703598" style="text-decoration:none;color: #363535;font-size: 12px;align-content: center">
+    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=34010402703598" style="text-decoration:none;color: #363535;font-size: 12px;align-content: center; display: inline-block">
         <img src="/static/images/备案图标.png" style="float:left;"/>
         <p>皖公网安备 34010402703598号</p>
     </a>
